# CineMatch

./: .env.example  .gitignore  docker-compose.yml  homepage.html  movies.html
core/: .dockerignore  .env.example  Dockerfile  pyproject.toml
core/alembic/: env.py
core/alembic/versions/: 182e276718ea_init_tables.py
core/db/: config.py  db.py
core/models/: base.py  movie.py  review.py
core/routers/: dependencies.py  movies.py
core/schemas/: movie.py  review.py  tmdbmovie.py
core/services/rabbitmq/: config.py  rabbitmq.py
core/services/s3/: config.py  s3_service.py
core/services/tmdb/: config.py  tmdbservice.py
core/src/: dependencies.py  main.py
core/tests/: test_config.py  test_main.py  test_movie_routes.py  test_routers_movies.py
frontend/: .dockerignore  .gitignore  Dockerfile  angular.json  eslint.config.js  nginx.conf  package-lock.json  package.json  proxy.conf.json  tsconfig.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts
gateway/: .env.example  Dockerfile  eslint.config.mjs  jest.config.ts  nodemon.json  package-lock.json  package.json  prisma.config.ts  tsconfig.json
gateway/prisma/: schema.prisma
gateway/src/: app.ts  index.ts  prisma.ts  server.ts
gateway/src/config/: env.ts
gateway/src/controllers/: authController.ts
gateway/src/middleware/: authMiddleware.ts  errorHandler.ts
gateway/src/proxy/: movieProxy.ts
gateway/src/routes/: authRoutes.ts  healthRoutes.ts  movieRoutes.ts
gateway/src/services/: S3Service.ts  authService.ts
(+69 files in other folders)
